--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.1.3",
+    "@supabase/supabase-js": "^2.53.0",
     "aos": "^3.0.0-beta.6",
     "howler": "^2.2.4",
     "next": "14.1.3",
